# darktable

./: ADDITIONAL_IMPROVEMENTS.md  BUILD-WINDOWS.bat  FINAL_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  SESSION_2_IMPROVEMENTS.md  SESSION_3_SUMMARY.md  SESSION_4_SUMMARY.md  UI_IMPROVEMENTS_ANALYSIS.md  WINDOWS-BUILD-GUIDE.md  build-installer.sh  build-windows.sh
src/bauhaus/: bauhaus.c
src/common/: curve_tools.c  dng_opcode.c  dwt.c  gaussian.c  heal.c  l10n.c  locallaplaciancl.c  metadata.c  utility.c
src/control/: conf.c  control.c  crawler.c  jobs.c
src/develop/: imageop_gui.c
src/gui/: accelerators.c  gtk.c  preferences.c  presets.c
src/imageio/format/: j2k.c
src/imageio/storage/: disk.c  gallery.c  latex.c
src/iop/: basecurve.c  clipping.c  colorbalance.c  colorout.c  diffuse.c  highlights.c  lens.cc  sigmoid.c
src/iop/hlreconstruct/: laplacian.c
src/libs/: export.c
src/tests/unittests/: CMakeLists.txt  test_memory_safety.c  test_path_handling.c
src/views/: darkroom.c  map.c  print.c  tethering.c  view.c
